--- a/Beroeps_GenZ/index.html
+++ b/Beroeps_GenZ/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="assets/Javascript/index.js"></script>
+    <link rel="icon" href="assets/Images/chef.png">
     <link rel="stylesheet" href="assets/CSS/style.css">
     <title>Koken Gen Z</title>
 </head>
